--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gama",
+  "name": "fox-blog",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,7 @@
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.4",   
+    "autoprefixer": "^10.2.4",
     "sass": "^1.32.7",
     "sass-loader": "^10.1.1"
   }
